Remove package-lock.json, add version bump scripts to package.json, and update README.md with version management instructions.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "test": "jest",
     "lint": "eslint src --ext ts,tsx",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "prepare": "npm run build"
+    "bump": "node scripts/bump-version.js",
+    "bump:patch": "node scripts/bump-version.js patch",
+    "bump:minor": "node scripts/bump-version.js minor",
+    "bump:major": "node scripts/bump-version.js major"
   },
   "keywords": [],
   "author": "",
